--- a/postgres-config.yaml
+++ b/postgres-config.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,5 +7,5 @@ metadata:
 data:
   POSTGRES_DB: postgresdb
   POSTGRES_USER: admin
-  POSTGRES_PASSWORD: psltest
+  POSTGRES_PASSWORD: k8stest
 
